css/style.css
/* General formatting */
body {
  margin: 0;
  min-width: 1000px;
  overflow-x: hidden;
  font-family: 'Lucida Grande', 'Lucida Sans Unicode', Helvetica, sans-serif;
}

a {
  text-decoration: none;
  color: #08c;
  font-size: 11px;
}

/* header section */
.header-section {
  height: 65vh;
  background: url(../images/back1.jpg) bottom;
  background-size: cover;
  min-height: 435px;
  padding-top: 75px;
}

/* Navbar section */
nav {
  width: 980px;
  height: 36px;
  margin: 0 auto;
  border-radius: 3px;
}

nav ul > li > a {
  height: 36px;
  color: #fff;
  align-items: center;
  font-size: 12px;
  display: flex;
  justify-content: center;
  box-shadow: 0 0 2px rgba(255, 255, 255, 0.8);
  border-radius: 3px;
}

aside ul li + li a {
  border-left: 2px solid #fff;
}

a:hover {
  text-decoration: underline;
}

nav a:hover {
  text-decoration: none;
  background: linear-gradient(#808080, #5e5e5e, #2c2c2c, #5e5e5e, #808080);
}

ul,
li {
  padding: 0;
  list-style: none;
}

nav ul {
  grid-template-columns: repeat(8, 1fr) auto;
}

.image-three p {
  font-size: 1.5em;
  line-height: 1.5;
  color: transparent;
  font-weight: 200;
  text-shadow: 0 0 0.5px #fff;
  text-align: center;
}

.image-three p:last-child { font-size: 1.5em; }
.image-three p:hover { text-decoration: underline; }

div.search-box {
  position: relative;
}

.fa-search {
  color: white;
  position: absolute;
  left: 1em;
  bottom: 0.3em;
}

#search-input {
  width: 120px;
  height: 22px;
  border-radius: 12px;
  border: 1px solid transparent;
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.758);
  border-bottom: 0.5px solid #9c9b9b;
  transition: width 0.3s ease-in-out;
  margin: 0;
  padding-left: 2em;
}

#search-input:focus {
  background: #fff;
  background: linear-gradient(#fff, #fff);
  width: 200px;
  outline: none;
  border-radius: 12px;
  border: 1px solid transparent;
}

nav:not(:last-child):hover {
  background: #333;
  border: 0;
}

nav li:last-child {
  padding: 3px 20px;
}

/* aside section */
aside {
  margin-top: -0.7em;
  height: 200px;
}

aside ul,
.sitemap ul {
  max-width: 100%;
  height: 100%;
  grid-template-columns: repeat(4, 1fr);
  overflow: hidden;
  gap: 1px;
}

/* footer section */
footer {
  margin-top: 10px;
  height: 10vh;
  font-size: 10px;
  justify-content: space-around;
  align-items: baseline;
}

.sitemap ul li {
  display: inline-block;
}

.sitemap-link {
  padding-left: 5px;
  border-left: 1px solid #acacac;
}

/* helper classes */
.hidden { display: none; }
.block { display: block; }
.cursor { cursor: pointer; }
.grid { display: grid; }
.flex { display: flex; }
.align-center { align-items: center; }
.justify-center { justify-content: center; }
.washed-out { color: #6e6e6e; }
.font { font-family: 'Lucida Grande', 'Lucida Sans Unicode', Helvetica, sans-serif; }

.gradient {
  background: -moz-linear-gradient(top, #888 0%, #707070 49%, #5e5e5e 50%, #717571 100%);
  background: -webkit-linear-gradient(top, #888 0%, #707070 49%, #5e5e5e 50%, #717571 100%);
  background: linear-gradient(to bottom, #888 0%, #707070 49%, #5e5e5e 50%, #717571 100%);
}

